--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -47,7 +47,7 @@
             <a href="{% url 'portfolio' user.id %}"><p>내 포트폴리오</p></a>
             <a href=""><p>내가 쓴 글</p></a>
             <a href=""><p>내가 쓴 댓글</p></a>
-            <a href=""><p>내 스크랩</p></a>
+            <a href="{% url 'myscrap' user.id %}"><p>내 스크랩</p></a>
         </div>
         <div class="home_recommend">
             <h1>{{ user.username }}님께 추천하는 채용 정보</h1>
