--- a/info/templates/info.html
+++ b/info/templates/info.html
@@ -46,8 +46,8 @@
       }
       .info_recruit {
         display: grid;
-        grid-auto-rows: 200px;
-        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: minmax(200px, auto);
+        grid-template-columns: repeat(auto-fill, minmax(500px,auto));
         gap: 1rem;
         row-gap: 2rem;
         width: 80vw;
@@ -60,8 +60,9 @@
       .info_recruit_item {
         text-align: left;
         padding: 1rem 2.5rem;
-        /* width: 40vw; */
-        width: 600px;
+        width: 35vw;
+        min-width: 450px;
+        max-width: 600px;
         border: 1px solid rgb(220, 220, 220);
         border-radius: 30px;
         box-shadow: 0 0 20px -5px rgba(110, 110, 110, 0.4);
@@ -87,6 +88,21 @@
       }
       .recruit_date {
         color: rgb(218, 19, 19);
+      }
+      @media (max-width: 1500px) {
+        .info_recruit {
+          grid-template-columns: repeat(auto-fill, minmax(400px,auto));
+        }
+        .info_recruit_item {
+          width: 30vw;
+          min-width: 300px;
+          max-width: 500px;
+        }
+      }
+      @media (max-width: 1020px) {
+        .info_recruit_item {
+          width: 600px;
+        }
       }
     </style>
   </head>
