--- a/qna/templates/detail.html
+++ b/qna/templates/detail.html
@@ -13,19 +13,112 @@
         line-height: 4rem;
         letter-spacing: 0.2rem;
       }
-      
+      .qna_create {
+        font-size: 1.2rem;
+        display: inline;
+        border: 1.5px solid gray;
+        border-radius: 30px;
+        background-color: rgb(115, 132, 175);
+        color: white;
+        font-weight: 500;
+        padding: 0.7rem 1.2rem;
+        margin-left: 1rem;
+      }
+      select {
+        font-size: 1.2rem;
+        width: 7rem;
+        padding: 0.7rem 1.2rem;
+        border: 1.5px solid gray;
+        border-radius: 30px;
+        margin-right: 0.5rem;
+        background: url("https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg")
+          no-repeat 95% 50%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+      }
+      select::-ms-expand {
+        display: none;
+      }
+      select:focus {
+        outline: none;
+      }
+      input:focus {
+        outline: none;
+      }
+      .detailPage .search {
+        font-size: 1.2rem;
+        width: 35vw;
+        min-width: 300px;
+        max-width: 700px;
+        padding: 0.7rem 1.2rem;
+        border: 1.5px solid gray;
+        border-radius: 30px;
+      }
+      .qna_search {
+        margin-bottom: 3rem;
+      }
+      .qna_post {
+        text-align: left;
+        width: 50vw;
+        min-width: 600px;
+        margin: 0 auto;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        padding: 2rem 3rem;
+        border: 1px solid rgb(220, 220, 220);
+        border-radius: 30px;
+        box-shadow: 0 0 20px -5px rgba(110, 110, 110, 0.4);
+      }
+      .qna_title {
+        color:rgb(72, 101, 173);
+        font-size: 1.3rem;
+        font-weight: bold;
+      }
+      .qna_date {
+        color: gray;
+        font-size: small;
+        margin-bottom: 2rem;
+      }
+      .qna_body {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+      }
+      .edit {
+        margin-top: 1rem;
+      }
+      .edit a {
+        color: gray;
+      }
     </style>
   </head>
   <body>
     <div class="detailPage">
-        <h1>자세한 본문 내용</h1>
-        <br>
-        <h2>제목: {{qna.title}}</h2>
-        <p>작성 날짜 : {{qna.pub_date}}</p>
-        <p>자세한 본문 내용 : {{qna.body}}}</p>
-        <a href="{% url 'postupdate' qna.id %}">수정하기</a>
-        <br>
-        <a href="{% url 'postdelete' qna.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제하기</a>
+      <h1><a href="{% url 'qna' %}" style="color: rgb(72, 101, 173);">Q&A</a></h1>
+      <div class="qna_search">
+        <select id="filter" name="filter">
+          <option value="" disabled selected>필터</option>
+          <option value="latest">최신순</option>
+          <option value="popularity">인기순</option>
+          <option value="views">조회순</option>
+        </select>
+  
+        <input class="search" type="text" placeholder="검색어를 입력하세요" />
+        <a href="{% url 'postcreate' %}"><p class="qna_create">✏️ 질문하기</p></a>
+      </div>
+      <div class="qna_post">
+        <a href="{% url 'detail' qna.id %}">
+          <div style="display: flex; justify-content: space-between; margin-bottom: -1rem;">
+            <p class="qna_title">{{ qna.title }}</p>
+            <div class="edit">
+              <a href="{% url 'postupdate' qna.id %}">수정</a>&nbsp;
+              <a href="{% url 'postdelete' qna.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
+            </div>
+          </div>
+          <p class="qna_date">{{ qna.pub_date }}</p>
+          <p class="qna_body">{{ qna.body }}</p>
+        </a>
+      </div>
     </div>
   </body>
 </html>
