--- a/cal/templates/input.html
+++ b/cal/templates/input.html
@@ -4,146 +4,77 @@
 
 <head>
     <style>
-        .calPage {
+        .calinputPage {
             text-align: center;
             min-height: 100vh;
         }
 
-        .calPage h1 {
+        .calinputPage h1 {
             font-size: 2.3rem;
             color: rgb(72, 101, 173);
             line-height: 4rem;
             letter-spacing: 0.2rem;
         }
-        .container {
-            min-height: 100vh;
-        }
 
-        @font-face {
+        /* @font-face {
             font-family: 'BMHANNAPro';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
             font-weight: normal;
             font-style: normal;
+        } */
+
+        .write table {
+            margin: 2rem auto;
         }
-
-        .calendar {
-            width: 70vw;
-            font-size: 1rem;
-            margin: auto;
-            background: #fff;
-            border-radius: 0 0 1em 1em;
-            -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
-            box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
-            color: #555;
-            text-align: center;
-            min-height: 100vh;
+        .write input {
+            font-size: 1.1rem;
+            padding: 1rem 2rem;
+            margin-top: 1rem;
+            border: 1px solid gray;
+            border-radius: 20px;
+            width: 35rem;
         }
-
-        .month {
-            font-size: 1rem;
+        .write textarea {
+            font-size: 1.1rem;
+            padding: 2rem;
+            width: 35rem;
+            height: 15rem;
+            margin-top: 1rem;
+            border-radius: 20px;
         }
-
-        .date {
-            font-size: 1rem;
-        }
-
-        .calendar .month {
-            color: #222222;
-            font-weight: 800;
-        }
-
-        .calendar th {
-            padding: 2vw;
-            text-align: center;
-            font-size: 1.5rem;
-        }
-
-        .calendar tr {
-            color: #e66b6b;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        .calendar td {
-            width: 1rem;
-            height: 4.5em;
-            padding: .25em .25em;
-            transition: background .5s;
-        }
-
-
-        .calendar td:hover {
-            background: #cacaca;
-            color: #fff;
-        }
-
-        .event_line {
-            height: 100%;
-            padding: 0;
-            list-style: none;
-            margin: 0;
-        }
-
-        a {
-            transition: color .2s;
-        }
-
-        span {
-            color: black;
-        }
-
-        a:link {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:visited {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            color: red;
-            text-decoration: none;
-        }
-
-        .left {
-            float: left;
-            margin: 10px;
-        }
-
-        .right {
-            float: right;
-            margin: 10px;
-        }
-
-        .form {
-            margin: auto;
-        }
-
-        .form input,
-        .form select,
-        .form textarea {
-            border-radius: 5px;
-            border: 1px solid #17a2b8;
+        .write input:focus {
             outline: none;
-            background: none;
-            padding: 5px;
-            width: 100%;
+        }
+        .write textarea:focus {
+            outline: none;
+        }
+        .write input[type="submit"] {
+            margin-top: 1rem;
+            padding: 1.1rem 1.5rem;
+            width: 6rem;
+            color: white;
+            font-weight: 500;
+            background-color: rgb(115, 132, 175);
+            border-radius: 30px;
+            border: none;
+        }
+        .write input[type="submit"]:hover {
+            cursor: pointer;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <br>
-        <form method="POST">
-            {% csrf_token %}
-            <div class="form form-table">
-                {{ form }}
-                <button type="submit" class="btn btn-info right"> Submit </button>
-            </div>
-        </form>
+    <div class="calinputPage">
+        <div class="write">
+            <form method="POST">
+              {% csrf_token %}
+              <table>
+              {{form.as_table}}
+              </table>
+              <input type="submit" value="등록">
+            </form>
+        </div>
     </div>
 </body>
 
