포트폴리오 모델 수정

--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -40,6 +40,7 @@
         width: 70vw;
         font-size: 1rem;
         background: #fff;
+        padding: 1rem;
         /* -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff; */
         /* box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff; */
         border-radius: 40px;
