--- a/user/templates/project_edit.html
+++ b/user/templates/project_edit.html
@@ -68,6 +68,10 @@
               <td>{{ form.project_end }}</td>
             </tr>
             <tr>
+              <td>사용 언어나 프레임워크</td>
+              <td>{{ form.project_detail }}</td>
+            </tr>
+            <tr>
               <td>github 주소</td>
               <td>{{ form.project_github }}</td>
             </tr>
