--- a/human/templates/dwrite.html
+++ b/human/templates/dwrite.html
@@ -1,9 +1,11 @@
+{% extends 'base.html' %}
+{% block content %}
 </head>
 <body>
  
   <br>
   <div class="container">
-      <form action="{% url 'dpostcreate' %}">
+      <form action="{% url 'postcreate' %}">
         <h4>제목: </h4>
         <input type="text" name="title">
         <br>
@@ -20,3 +22,4 @@
 
 </body>
 </html>
+{% endblock %}
