--- a/human/templates/humanhome.html
+++ b/human/templates/humanhome.html
@@ -1,92 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    {% extends 'base.html' %} {% block content %} {% load static %}
-<a href="{% url 'dwrite' %}"> 구인하러가기</a>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      .humanPage {
-        text-align: center;
-        min-height: 100vh;
-      }
-      .humanPage h1 {
-        font-size: 2.3rem;
-        color: rgb(72, 101, 173);
-        line-height: 4rem;
-        letter-spacing: 0.2rem;
-      }
-      select {
-        font-size: 1.2rem;
-        width: 7rem;
-        padding: 0.7rem 1.2rem;
-        border: 1.5px solid gray;
-        border-radius: 30px;
-        margin-right: 0.5rem;
-        background: url("https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg")
-          no-repeat 95% 50%;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-      }
-      select::-ms-expand {
-        display: none;
-      }
-      select:focus {
-        outline: none;
-      }
-      input:focus {
-        outline: none;
-      }
-      .humanPage .search {
-        font-size: 1.2rem;
-        width: 35vw;
-        min-width: 300px;
-        max-width: 700px;
-        padding: 0.7rem 1.2rem;
-        border: 1.5px solid gray;
-        border-radius: 30px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="humanPage">
+{% extends 'base.html' %}
 
-      <br />
-      {% for human in humans.all %}
-      <div class="container">
-        <div class="card">
-          <div class="card-body">
-            <h1>제목 : {{ human.title }}</h1>
-            <p>작성일자 : {{ human.pub_date| date:"Y-m-d" }}</p>
-            <p>자세히보기: {{human.body}}</p>
-            <a href="{% url 'dpage' humanlog.id %}">자세히보기</a>
-          </div>
-        </div>
-      </div>
-      <br />
-      {% endfor %} {% endblock %}
+{% block content %}
+<h1>hello</h1>
 
-    </div>
-  </body>
-</html>
+<a href="{% url 'dnew' %}">새로운페이지</a>
+<a href="{% url 'newcreate' %}">새글 쓰기</a>
 
+<br>
+{% for post in posts.all %}
+        <h1>{{post.title}}</h1>
+        <p>{{ post.created_at }}</p>
+        <p>{{ post.body }}</p><a href="{% url 'dpage' post.id %}">자세히 보기</a>
+    {% endfor %}
+<br>
+{% endblock %}
