--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -6,18 +6,32 @@
     <p>{{ post.created_at }}</p>
     <p>{{ post.body }}</p> 
     <br>
-    <a href="{% url 'commentcreate' user.id post.id %}">댓글작성하기</a>
+    <a href="{% url 'commentcreate' user.id post.id %}"> <button type='submit'>댓글등록</button></a>
     <form method='POST'>
       {% csrf_token %} 
       {{form}} 
-      <button type='submit'>댓글등록</button>
+     
     </form>
     <br>
-
     <h4>댓글목록</h4>
+    <form method='POST'>
+        {% csrf_token %} 
+        {{form_comment}} 
+        
+    </form>
     {% for comment in post.comment_set.all %}
-            {{comment.content}}<br>
+    <div class="comment">
+      <div>
+        <span>{{comment.user.username}}</span>
+        <div>{{comment.content}}</div>
+      </div>
+     
+        <a class="edit" href="{% url 'commentupdate' post.id comment.id %}"><button type="submit">댓글 수정</button></a>
+        <a class="delete" href="{% url 'commentdelete' post.id comment.id %}" onclick="return confirm('정말 삭제하시겠습니까?')"><button type="submit">댓글 삭제</button></a>
+    
+    </div>
     {% endfor %}
-    <br><br><br>
+  </body>
+</html>
     <a href="{% url 'humanhome' %}">돌아가기</a>
     {% endblock %}
