글삭하고 구인홈으로감

--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -6,6 +6,10 @@
     <p>{{ post.created_at }}</p>
     <p>{{ post.body }}</p> 
     <br>
+
+    <a href="{% url 'hpostdelete' post.id %}"><button type='submit'>구인글삭제하기</button></a>
+    <br>
+
     <a href="{% url 'commentcreate' user.id post.id %}"> <button type='submit'>댓글등록</button></a>
     <form method='POST'>
       {% csrf_token %} 
