--- a/human/templates/newcreate.html
+++ b/human/templates/newcreate.html
@@ -4,7 +4,7 @@
 
 <br>
 <div class="container">
-	<form action="{% url 'postcreate' %}">
+	<form action="{% url 'hpostcreate' %}">
 	  <h4>제목: </h4>
 	  <input type="text" name="title">
 	  <br>
