로그아웃 부활

--- a/human/templates/dnew.html
+++ b/human/templates/dnew.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>new page</h1>
+<h1>공지사항</h1>
 
-<a href="{% url 'humanhome' %}">humanhome</a>
+1.반말금지
+2.실명언급금지
+3.전화번호 교환금지
+4.욕설금지
+5.금전거래 금지
+<br><br>
+<a href="{% url 'humanhome' %}">구인홈으로 돌아가기</a>
 {% endblock %}
