--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -99,7 +99,8 @@
           <a href="javascript:{document.getElementById('logout').submit()}"
             >로그아웃</a
           >
-         
+          <form id="logout" method="POST" action="{% url 'logout' %}">
+            {% csrf_token %} <input type="hidden" />
           </form>
           {% else %}
           <a href="{% url 'login' %}">로그인</a>
