--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -14,7 +14,7 @@
 
 		{% csrf_token %} 
         이름(실명):
-        <input name="name" type="text" value="">
+        <input name="realname" type="text" value="">
         <br>
         아이디:
         <input name="username" type="text" value="">
@@ -27,8 +27,7 @@
         <br>
         이메일:
         <input name="email" type="email" value="">
-        <br>
-        <br> 
+        <br><br>
 	    <input type="submit" class="btn btn-primary" value="Sign Up!"> 
         <br>
         <br>
