--- a/cal/templates/input.html
+++ b/cal/templates/input.html
@@ -73,6 +73,7 @@
               {{form.as_table}}
               </table>
               <input type="submit" value="등록">
+              <input type="submit" value="삭제">
             </form>
         </div>
     </div>
