회원가입 css 수정

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -67,11 +67,11 @@
                 {% csrf_token %}
                 <table>
                     <tr>
-                        <td class="login_label">username</td>
+                        <td class="login_label">닉네임</td>
                         <td>{{ form.username }}</td>
                     </tr>
                     <tr>
-                        <td class="login_label">password</td>
+                        <td class="login_label">비밀번호</td>
                         <td>{{ form.password }}</td>
                     </tr>
                 </table>
