--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -120,7 +120,7 @@
         min-width: 600px;
         margin: 0 auto;
         margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 10rem;
         padding: 3rem 4rem;
         border: 1px solid rgb(220, 220, 220);
         border-radius: 30px;
@@ -168,40 +168,49 @@
               <span class="team_user">{{ post.user.username }}</span>
               <span class="team_date">{{ post.created_at }}</span>
             </div>
+            {% if user.is_authenticated and user.username == post.user.username %}
             <div class="edit">
               <a href="{% url 'hpostupdate' post.id %}">수정</a>&nbsp;
               <a href="{% url 'hpostdelete' post.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
             </div>
+            {% endif %}
           </div>
           <hr>
           <p class="team_title">{{ post.title }}</p>
           <p class="team_body">{{ post.body }}</p>
       </div>
-
-      <form method='POST'>
-        {% csrf_token %}
-        {{form_comment}} 
-      </form>
       
       <div class="comments">
         <h2>댓글목록</h2>
           <form method='POST'>
             {% csrf_token %} 
             {{ form }} 
+            {% if not commentId %}
             <input value="등록" type="submit" />
+            {% endif %}
           </form>
         <hr>
         {% for comment in post.comment_set.all %}
           <div class="comment">
             <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: -1rem;">
               <p class="team_title">{{ comment.user.username }}</p>
+              {% if user.is_authenticated and user.username == comment.user.username %}
               <div class="edit">
-                <a href="{% url 'commentupdate' post.id comment.id %}">수정</a>&nbsp;
-                <a href="{% url 'commentdelete' post.id comment.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
+                <a href="{% url 'commentupdate' post.id comment.id user.id %}">수정</a>&nbsp;
+                <a href="{% url 'commentdelete' post.id comment.id user.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제</a>
               </div>
+              {% endif %}
             </div>
             <p class="team_date">{{ comment.created_at }}</p>
+            {% if comment.id == commentId %}
+            <form method='POST'>
+              {% csrf_token %}
+              {{ form_comment }}
+              <input value="수정" type="submit" />
+            </form>
+            {% else %}
             <p class="team_body">{{ comment.content }}</p>
+            {% endif %}
           </div>
         <hr>
         {% endfor %}
