--- a/human/templates/humanhome.html
+++ b/human/templates/humanhome.html
@@ -121,7 +121,7 @@
         <a href="{% url 'hpostcreate' user.id %}"><p class="team_create">✏️ 글쓰기</p></a>
       </div>
          
-    <a href="{% url 'notice' %}">공지사항</a>
+    <!-- <a href="{% url 'notice' %}">공지사항</a> -->
 
       {% for post in posts.all %}
       <div class="team_post">
