팀원모집 방문자 오류 해결

--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -170,7 +170,9 @@
         </select>
   
         <input class="search" type="text" placeholder="검색어를 입력하세요" />
+        {% if user.is_authenticated %}
         <a href="{% url 'hpostcreate' user.id %}"><p class="team_create">✏️ 글쓰기</p></a>
+        {% endif %}
       </div>
          
       <!-- <a href="{% url 'notice' %}">공지사항</a> -->
@@ -199,7 +201,7 @@
           <form method='POST'>
             {% csrf_token %} 
             {{ form }} 
-            {% if not commentId %}
+            {% if user.is_authenticated and not commentId %}
             <input value="등록" type="submit" />
             {% endif %}
           </form>
