--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -142,7 +142,7 @@
         border-radius: 10px;
         border: none;
       }
-      .comment_title {
+      .comment_user {
         color:rgb(72, 101, 173);
         font-size: 1.3rem;
         font-weight: bold;
@@ -181,7 +181,7 @@
           <div class="team_post_top">
             <div class="team_post_user">
               <img class="userImg" src="{% static 'user.png' %}" alt="user">
-              <span class="team_user">{{ post.user.username }}</span>
+              <a href="{% url 'others_portfolio' post.user.id %}"><span class="team_user">{{ post.user.username }}</span></a>
               <span class="team_date">{{ post.created_at }}</span>
             </div>
             {% if user.is_authenticated and user.username == post.user.username %}
@@ -211,7 +211,7 @@
             <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: -0.5rem;">
               <div style="display: flex; align-items: center;">
                 <img class="userImg" src="{% static 'user.png' %}" alt="user">
-                <p class="comment_title">{{ comment.user.username }}</p>
+                <a href="{% url 'others_portfolio' comment.user.id %}"><p class="comment_user">{{ comment.user.username }}</p></a>
                 <p class="comment_date">{{ comment.created_at }}</p>
               </div>
               {% if user.is_authenticated and user.username == comment.user.username %}
