--- a/user/templates/portfolio.html
+++ b/user/templates/portfolio.html
@@ -95,18 +95,22 @@
   <body>
     <div class="portfolio">
       <div class="portfolio_header">
-        <h1>{{user.username}}님의 포트폴리오</h1>
+        <h1>{{username}}님의 포트폴리오</h1>
+        {% if user.username == username %}
         <select id="field" name="field">
           <!-- <option value="private" {% if portfolio.isPrivate == true %}selected="selected"{% endif %}>비공개</option>
           <option value="open" {% if portfolio.isPrivate == false %}selected="selected"{% endif %}>공개</option> -->
           <option value="private" selected="selected">비공개</option>
           <option value="open">공개</option>
         </select>
+        {% endif %}
       </div>
       <div class="portfolio_content">
         <div class="projects_title">
           <h2>Projects</h2>
+          {% if user.username == username %}
           <a href="{% url 'projectcreate' user.id %}"><h2>+</h2></a>
+          {% endif %}
         </div>
 
         {% for project in projects.all %}
@@ -117,10 +121,12 @@
           </div>
           <div>
             <p class="project_name">{{ project.project_name }}</p>
+            {% if user.username == username %}
             <a href="{% url 'projectupdate' user.id project.id %}"><span>✎</span></a>
             <a href="{% url 'projectdelete' user.id project.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">
               <span style="margin-left: 7px;">𝗫</span>
             </a>
+            {% endif %}
             <p class="project_detail">
               {{ project.project_detail }}
             </p>
@@ -141,7 +147,9 @@
         <hr />
         <div class="activities_title">
           <h2>Activities</h2>
+          {% if user.username == username %}
           <a href="{% url 'activitycreate' user.id %}"><h2>+</h2></a>
+          {% endif %}
         </div>
 
         {% for activity in activities.all %}
@@ -152,10 +160,12 @@
           </div>
           <div>
             <p class="activity_name">{{ activity.activity_name }}</p>
+            {% if user.username == username %}
             <a href="{% url 'activityupdate' user.id activity.id %}"><span>✎</span></a>
             <a href="{% url 'activitydelete' user.id activity.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">
               <span style="margin-left: 7px;">𝗫</span>
             </a>
+            {% endif %}
             <p class="activity_date">
               {{ activity.activity_start }} ~ {{ activity.activity_end }}
             </p>
